--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy: 
       matrix:
-        node-varsion: [ 18.16.1 ]
+        node-version: [ '18.x' ]
     steps:
       - uses: actions/checkout@v4
       - name: Starting node.js ${{ matrix.node-version }}
