--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,10 @@ on: [push]
 jobs:
   init:
     runs-on: ubuntu-latest
-    strategy: 
+    strategy:
       matrix:
-        node-version: [ '18.x' ]
+        node-version: ['14.x', '16.x', '18.x']
+
     steps:
       - uses: actions/checkout@v4
       - name: Starting node.js ${{ matrix.node-version }}
