--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MYSQL_HOST=localhost
 MYSQL_DB=great-collections-db
 MYSQL_USER=collUser
 MYSQL_PASSWORD=masterkey%12
-PRIVATE_KEY=mysuperpupersecret
+PRIVATE_KEY="mysuperpupersecret"
