Auth and roles systems fixes 2

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MYSQL_DB=great-collections-db
 MYSQL_USER=collUser
 MYSQL_PASSWORD=masterkey%12
 PRIVATE_KEY="mysuperpupersecret"
+FRONT_ORIGIN=http://localhost:3000
