Collection service init

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_PORT=3306
-MYSQL_HOST=localhost
+MYSQL_HOST=DASHA
 MYSQL_DB=great-collections-db
 MYSQL_USER=collUser
 MYSQL_PASSWORD=masterkey%12
 PRIVATE_KEY="mysuperpupersecret"
-FRONT_ORIGIN=http://localhost:3000
+FRONT_ORIGIN=https://reqbin.com/
