--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.13",
     "@types/cookie-parser": "^1.4.5",
+    "@types/multer": "^1.4.10",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "multer": "^1.4.5-lts.1",
+    "multer-google-drive-teams-storage": "^1.1.0",
+    "multer-google-storage": "^1.3.0",
     "mysql2": "^3.6.1",
+    "nestjs-google-drive": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.33.0",
