--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQL_PORT=3306
-MYSQL_HOST=DASHA
+MYSQL_HOST=localhost
 MYSQL_DB=great-collections-db
 MYSQL_USER=collUser
 MYSQL_PASSWORD=masterkey%12
