--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.13",
+    "@nestjs/websockets": "^10.2.10",
     "@types/cookie-parser": "^1.4.5",
     "@types/multer": "^1.4.10",
     "bcryptjs": "^2.4.3",
